<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.apache.hop</groupId>
  <artifactId>hop-datavault</artifactId>
  <version>0.0.9-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Hop Data Vault 2.0 Metadata</name>
  <description>Metadata definitions for Data Vault 2.0 models (Hubs, Links, Satellites) and update configurations for Apache Hop</description>
  <url>https://github.com/mattcasters/hop-data-vault</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <hop.version>2.18.0</hop.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <jandex.version>3.5.3</jandex.version>
    <lombok.version>1.18.42</lombok.version>
    <apache.rat.version>0.16.1</apache.rat.version>
  </properties>

  <dependencies>
    <!-- Hop core contains metadata annotations, IHopMetadata, HopMetadataBase, IHasName, IGuiPosition etc. -->
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-core</artifactId>
      <version>${hop.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- IBaseMeta lives in hop-engine -->
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-engine</artifactId>
      <version>${hop.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- UI classes for HopFileType, HopGui, IGc etc. -->
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-ui</artifactId>
      <version>${hop.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Jandex index support for fast annotation discovery by Hop's plugin system -->
    <dependency>
      <groupId>io.smallrye</groupId>
      <artifactId>jandex</artifactId>
      <version>${jandex.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Lombok for cleaner code (getters, setters, etc.). Matches the version used by Apache Hop 2.18. -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>

    <!--
      Additional Hop transform plugins made available on the compile classpath (provided scope)
      so that code using the Hop API (e.g. to construct PipelineMeta with transforms like TableInput,
      TableOutput, MergeRows, FilterRows) can compile against their Meta classes etc.
      These are NOT packaged into this plugin's jar (Hop loads plugins dynamically).
      Corresponding plugin dependencies are declared via src/main/resources/dependencies.xml
      which is included in the assembly.
    -->
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-tableinput</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-tableoutput</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-update</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-mergerows</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-filterrows</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-checksum</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-sql</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-constant</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-sort</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-selectvalues</artifactId>
      <version>${hop.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hop</groupId>
      <artifactId>hop-transform-groupby</artifactId>
      <version>${hop.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <release>21</release>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <!-- Generate Jandex index (META-INF/jandex.idx) so Hop can efficiently discover
           all plugin annotations (@HopMetadata, @GuiPlugin, @HopFileTypePlugin, etc.)
           without expensive runtime scanning. -->
      <plugin>
        <groupId>io.smallrye</groupId>
        <artifactId>jandex-maven-plugin</artifactId>
        <version>${jandex.version}</version>
        <executions>
          <execution>
            <id>make-index</id>
            <goals>
              <goal>jandex</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <version>${apache.rat.version}</version>
        <configuration>
          <consoleOutput>true</consoleOutput>
          <excludes>
            <exclude>LICENSE</exclude>
            <exclude>NOTICE</exclude>
            <exclude>**/target/**</exclude>
            <exclude>**/*.svg</exclude>
            <exclude>**/*.json</exclude>
            <exclude>**/*.hdv</exclude>
            <exclude>**/*.hpl</exclude>
            <exclude>**/*.hwf</exclude>
            <exclude>**/datasets/*.csv</exclude>
            <exclude>**/*.jpg</exclude>
            <exclude>**/*.png</exclude>
            <exclude>**/*.iml</exclude>
            <exclude>.gitignore</exclude>
            <exclude>AGENTS.md</exclude>
            <exclude>docs/**</exclude>
            <exclude>project/**</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- Assembly to create a plugin distribution zip for easy install -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <descriptors>
            <descriptor>src/assembly/assembly.xml</descriptor>
          </descriptors>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
